nav tag added on footer - positionning display bug resolved on menu, footer visible(hero img in background, not html) - "Commander" button aligned

--- a/src/main.scss
+++ b/src/main.scss
@@ -203,30 +203,38 @@ footer{
 
 /*-----Menu1 - La palette du gôut-----*/
 #main_menu{
-	.hero img{
-		width:100%;
+	.hero{
 		height:300px;
-		/*position: fixed; *//*problème de footer avec et sans position fixed*/
-		top: 70px;	
+		background-size: cover;
+		&_menu1{
+			background-image: url("images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+		}
 	}
 	.menu{
-		position: absolute; /*probleme de superposition quand inactif, probleme de footer quand actif*/
-		top:300px;
+		margin-top: -30px;
 		width: 100%;
 		background: $grey;
 		border-radius: 20px 20px 0 0;
+		display: flex;
+		flex-direction: column;
+		button{
+			margin:50px auto 50px auto;
+		}
 	}
 	h1{
 		font-family: shrikhand, sans-serif;
 		font-weight: normal;
-		margin: 10px 20px 10px 20px;
-		&::after{
+		width:90%;
+		margin: 0 20px 10px 20px;
+		padding-top: 30px;
+		
+		/*&::after{
 			content:"\f004";
 			color:$icon_color;
-			font-weight: 400; /*bold 700 for full heart*/
+			font-weight: 400;
 			font-family:$iconfont;
-			padding-left: 15%; /*% or px?*/
-		}
+			padding-left: 15%;
+		}*/
 	}
 	
 	.underline{
@@ -240,9 +248,8 @@ footer{
 		background: white;
 		border-radius: 20px;
 		box-shadow: 0 6px 13px lightgrey;
-		width: 90%;
 		height: $dish_label_height;
-		margin:20px auto 20px auto ;
+		margin:20px;
 		display: flex;
 		overflow:hidden;
 		
